# eyeson_flask

./: .coveragerc  AUTHORS.rst  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: conf.py  index.rst
eyeson_flask/: app.py  core.py  translators.py
eyeson_flask/templates/: 500.html  base.html  index.html  post_search.html
src/eyeson_flask/: forms.py  skeleton.py
src/eyeson_flask/templates/: index.html
tests/: test_core.py  test_skeleton.py  test_translators.py
